--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><title>Todo List</title><link href="/todo/static/css/main.e5388f32.css" rel="stylesheet"></head><body><div id="container"></div><script type="text/javascript" src="/todo/static/js/main.e513257e.js"></script></body></html>
+<!doctype html><html lang="en"><head><title>Todo List</title><link href="/to-do%20app/static/css/main.e5388f32.css" rel="stylesheet"></head><body><div id="container"></div><script type="text/javascript" src="/to-do%20app/static/js/main.cb775679.js"></script></body></html>
