--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><title>Todo List</title><link href="/static/css/main.8a06bedd.css" rel="stylesheet"></head><body><div id="container"></div><script type="text/javascript" src="/static/js/main.40836bc4.js"></script></body></html>
+<!doctype html><html lang="en"><head><title>Todo List</title><link href="/to-do-app/static/css/main.8a06bedd.css" rel="stylesheet"></head><body><div id="container"></div><script type="text/javascript" src="/to-do-app/static/js/main.d8dbc324.js"></script></body></html>
